Update imports: Fr components -> Pa components

--- a/src/components/blog/RelatedPostsPa.astro
+++ b/src/components/blog/RelatedPostsPa.astro
@@ -1,8 +1,8 @@
 ---
 import { APP_BLOG } from 'astrowind:config';
 
-import { getRelatedFrenchPosts } from '~/utils/blog-fr';
-import BlogHighlightedPostsFr from '../widgets/BlogHighlightedPostsFr.astro';
+import { getRelatedFrenchPosts } from '~/utils/blog-pa';
+import BlogHighlightedPostsFr from '../widgets/BlogHighlightedPostsPa.astro';
 import type { Post } from '~/types';
 
 export interface Props {
