--- a/src/components/blog/SinglePostPa.astro
+++ b/src/components/blog/SinglePostPa.astro
@@ -2,11 +2,11 @@
 import { Icon } from 'astro-icon/components';
 
 import Image from '~/components/common/Image.astro';
-import PostTagsFr from '~/components/blog/TagsFr.astro';
+import PostTagsFr from '~/components/blog/TagsPa.astro';
 import FAQSchema from '~/components/blog/FAQSchema.astro';
 import ArticleSchema from '~/components/common/ArticleSchema.astro';
 
-import { getPermalinkFr } from '~/utils/permalinks-fr';
+import { getPermalinkFr } from '~/utils/permalinks-pa';
 import { getFormattedDate } from '~/utils/utils';
 
 import type { Post } from '~/types';
