--- a/src/components/blog/TagsPa.astro
+++ b/src/components/blog/TagsPa.astro
@@ -1,5 +1,5 @@
 ---
-import { getPermalinkFr } from '~/utils/permalinks-fr';
+import { getPermalinkFr } from '~/utils/permalinks-pa';
 
 import { APP_BLOG } from 'astrowind:config';
 import type { Post } from '~/types';
