--- a/src/components/widgets/BlogHighlightedPostsPa.astro
+++ b/src/components/widgets/BlogHighlightedPostsPa.astro
@@ -1,9 +1,9 @@
 ---
 import { APP_BLOG } from 'astrowind:config';
 
-import GridFr from '~/components/blog/GridFr.astro';
+import GridFr from '~/components/blog/GridPa.astro';
 
-import { findFrenchPostsByIds } from '~/utils/blog-fr';
+import { findFrenchPostsByIds } from '~/utils/blog-pa';
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 import type { Widget } from '~/types';
 
