--- a/src/pages/pa/a-propos.astro
+++ b/src/pages/pa/a-propos.astro
@@ -4,7 +4,7 @@ import Image from '~/components/common/Image.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
 import PersonSchema from '~/components/common/PersonSchema.astro';
-import { headerDataFr, footerDataFr } from '~/navigation-fr';
+import { headerDataFr, footerDataFr } from '~/navigation-pa';
 
 // Metadata for the page
 const metadata = {
