--- a/src/pages/pa/comment-ca-fonctionne.astro
+++ b/src/pages/pa/comment-ca-fonctionne.astro
@@ -6,7 +6,7 @@ import Features from '~/components/widgets/Features.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
 import HowToSchema from '~/components/common/HowToSchema.astro';
-import { headerDataFr, footerDataFr } from '~/navigation-fr';
+import { headerDataFr, footerDataFr } from '~/navigation-pa';
 
 const metadata = {
   title: 'Comment Obtenir Votre Rabais Fizz de 40 $',
