--- a/src/pages/pa/index.astro
+++ b/src/pages/pa/index.astro
@@ -19,7 +19,7 @@ import fizzMyRewards from '~/assets/images/blog/fizz-my-rewards-level-up-guide.p
 import fizzVoLTE from '~/assets/images/blog/fizz-volte-emergency-calls-fix.png';
 
 // Import French navigation data
-import { headerDataFr, footerDataFr } from '~/navigation-fr';
+import { headerDataFr, footerDataFr } from '~/navigation-pa';
 
 // Pure Astro clipboard button component (no React hydration needed)
 import ClipboardButton from '~/components/ui/ClipboardButton.astro';
