--- a/src/components/blog/GridItemPa.astro
+++ b/src/components/blog/GridItemPa.astro
@@ -5,7 +5,7 @@ import type { Post } from '~/types';
 import Image from '~/components/common/Image.astro';
 
 import { findImage } from '~/utils/images';
-import { getPermalinkFr } from '~/utils/permalinks-fr';
+import { getPermalinkFr } from '~/utils/permalinks-pa';
 
 export interface Props {
   post: Post;
