--- a/src/components/blog/ListItemPa.astro
+++ b/src/components/blog/ListItemPa.astro
@@ -2,12 +2,12 @@
 import type { ImageMetadata } from 'astro';
 import { Icon } from 'astro-icon/components';
 import Image from '~/components/common/Image.astro';
-import PostTagsFr from '~/components/blog/TagsFr.astro';
+import PostTagsFr from '~/components/blog/TagsPa.astro';
 
 import { APP_BLOG } from 'astrowind:config';
 import type { Post } from '~/types';
 
-import { getPermalinkFr } from '~/utils/permalinks-fr';
+import { getPermalinkFr } from '~/utils/permalinks-pa';
 import { findImage } from '~/utils/images';
 import { getFormattedDate } from '~/utils/utils';
 
