--- a/src/pages/pa/blogue/[...page].astro
+++ b/src/pages/pa/blogue/[...page].astro
@@ -4,12 +4,12 @@ import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
-import BlogListFr from '~/components/blog/ListFr.astro';
+import BlogListFr from '~/components/blog/ListPa.astro';
 import Headline from '~/components/blog/Headline.astro';
 import Pagination from '~/components/blog/Pagination.astro';
 
-import { headerDataFr, footerDataFr } from '~/navigation-fr';
-import { fetchFrenchPosts, blogPostsPerPage } from '~/utils/blog-fr';
+import { headerDataFr, footerDataFr } from '~/navigation-pa';
+import { fetchFrenchPosts, blogPostsPerPage } from '~/utils/blog-pa';
 
 export const prerender = true;
 
