--- a/src/pages/pa/blogue/[slug].astro
+++ b/src/pages/pa/blogue/[slug].astro
@@ -4,15 +4,15 @@ import type { InferGetStaticPropsType, GetStaticPaths } from 'astro';
 import merge from 'lodash.merge';
 import type { ImageMetadata } from 'astro';
 import Layout from '~/layouts/PageLayout.astro';
-import SinglePostFr from '~/components/blog/SinglePostFr.astro';
-import ToBlogLinkFr from '~/components/blog/ToBlogLinkFr.astro';
+import SinglePostFr from '~/components/blog/SinglePostPa.astro';
+import ToBlogLinkFr from '~/components/blog/ToBlogLinkPa.astro';
 
 import { getCanonical } from '~/utils/permalinks';
 import { blogPostRobots } from '~/utils/blog';
-import { fetchFrenchPosts } from '~/utils/blog-fr';
+import { fetchFrenchPosts } from '~/utils/blog-pa';
 import { findImage } from '~/utils/images';
 import type { MetaData } from '~/types';
-import RelatedPostsFr from '~/components/blog/RelatedPostsFr.astro';
+import RelatedPostsFr from '~/components/blog/RelatedPostsPa.astro';
 
 export const prerender = true;
 
