--- a/src/pages/pa/contact.astro
+++ b/src/pages/pa/contact.astro
@@ -2,7 +2,7 @@
 import Layout from '~/layouts/Layout.astro';
 import Header from '~/components/widgets/Header.astro';
 import Footer from '~/components/widgets/Footer.astro';
-import { headerDataFr, footerDataFr } from '~/navigation-fr';
+import { headerDataFr, footerDataFr } from '~/navigation-pa';
 
 const metadata = {
   title: 'Contact - Nous Joindre',
